--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage" : "https://lit-97.github.io/plant-nursery-fp/",
+    "homepage" : "https://lit-97.github.io/",
   "name": "shoppingcart",
   "private": true,
   "version": "0.0.0",
